# galaxySimulator

./: .gitignore  README.md
source/: CMakeLists.txt  main.cpp  shader.cpp
source/include/: camera.h  shader.h
source/shaders/: computeShader.glsl  fragmentShader.glsl  vertexShader.glsl
